Fixed color and scrollbar

--- a/Portfolio/src/components/buttons/buttons.css
+++ b/Portfolio/src/components/buttons/buttons.css
@@ -34,4 +34,5 @@
 .DButtonText{
     font-size: 15px;
     font-weight: bold;
+    color: white;
 }
