--- a/Portfolio/src/index.css
+++ b/Portfolio/src/index.css
@@ -62,7 +62,8 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: black;
+    scrollbar-width: none; /* Firefox */
   }
   a:hover {
     color: #747bff;
